# hsr_driveby_full

./: CMakeLists.txt  README.md  package.xml
Poster/: .~lock.4YP_presentation.odp#  .~lock.ProjectPoster_v2.odg#  4YP_presentation.pptx  DRS_presentation_template_powerpoint.pptx  ProjectPoster.odg  ProjectPoster_v2.odg  Robert_Shi_poster_summary.docx  Robert_Shi_poster_summary_v1.docx
Poster/hsr_joints/: Arm.psd  base_roll_0.psd
config/: settings.yaml  tags.yaml
env-hooks/: 99.user_hsr_driveby_full.bash.em
launch/: detect_apriltag.launch  hsrb_empty_world_april_tag.launch  hsrb_empty_world_april_tag_metrics.launch  hsrb_empty_world_ar_tag.launch  hsrb_empty_world_ar_tag_metrics.launch  hsrb_my_world.launch  my_test_world.launch  spawn_bottle.launch  spawn_table.launch
launch/hsrb_launch_files/: hsrb_common.launch  (+1 more)
media/: trial_version_info.ods
object/: hackathon_marker.yaml  marker.yaml
resources/: ar_tag_test.rviz  base_movement.traj  base_planning.xml  base_planning_2.xml  create_base_traj.xml  hsr_driveby.rviz  hsr_ik.xml  hsr_meeting_room_table_aico.xml  hsr_meeting_room_table_aico_left_side_new.xml  hsr_meeting_room_table_aico_new.xml  hsr_meeting_room_table_aico_right_side_new.xml  hsr_wrs_world.xml  hsrb.srdf  meeting_room_base_movement.traj  meeting_room_table.scene  meeting_room_table_original.scene  meeting_room_table_other_side.scene  sdf_to_scene_14  sdf_to_scene_15  sdf_to_scene_15_in_world  sdf_to_scene_15_in_world_v2  soda_can.scene  tag_test.rviz  wrs2020.world  wrs2020_short.world
rqt_multiplot/: indicies_of_joints.ods  rqt_multiplot.xml
(+110 files in other folders)
